# 2024-P7-dannymaate

./: db.tf  docker-compose.yaml  endpoints.http  main.tf  pyproject.toml  role.tf  security.tf  server.tf  var.tf  w8_queues.txt
todo/views/: routes.py
