[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Brae Webb", "Evan Hughes"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
gunicorn = "*"
psycopg2-binary = "^2.9.9"
redis = "^5.0.3"
celery = "^5.4.0"
boto3 = "^1.34.86"
icalendar = "^5.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"